Minor spacing fix

--- a/app/assets/stylesheets/hero-unit.css.scss
+++ b/app/assets/stylesheets/hero-unit.css.scss
@@ -31,7 +31,7 @@
 
     .item {
       float: left;
-      margin-right: 2px;
+      margin-right: 1px;
     }
 
     .prev,
